--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div id="instruction" class="container">
             <h2>Rules</h2>
             <p id="info">Select diffculty to generate a word!<br> And you can click the letter box to begin guessing
-                letters!
+                letters! To reset points close the tab and open a new one
             </p>
             <div id="buttons">
             <button class="bstyle" id="easy">Easy</button>
